issue #163 Unable to use GraphViz
- added support to pass environment to doxygen call
- added support to pass defined variables in eclipse
- fixed null-ptr exception in preference page

Signed-off-by: Andre Bossert <anb0s@anbos.de>